--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ twilio = "^6.47.0"
 trio-asyncio = "^0.11.0"
 greenletio = "^0.0.7"
 pydub = "^0.24.1"
+Hypercorn = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
