--- a/hypercorn.toml
+++ b/hypercorn.toml
@@ -1,6 +1,6 @@
 bind="0.0.0.0:8000"
 loglevel="DEBUG"
-access_log_format="%(h)s -- %(r)s | %(s)s %(b)s"
+access_log_format="%(s)s] %(r)s -> %(b)s (%(T)sms)"
 accesslog="-"
 errorlog="-"
 use_reloader=true
