--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ trio-asyncio = "^0.11.0"
 greenletio = "^0.0.7"
 pydub = "^0.24.1"
 Hypercorn = "^0.11.1"
+redio = "^0.5.2"
+pytest-trio = "^0.7.0"
+pudb = "^2019.2"
+pytest-pudb = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
