--- a/hypercorn.toml
+++ b/hypercorn.toml
@@ -4,3 +4,5 @@ access_log_format="%(s)s] %(r)s -> %(b)sb[%(L)ss]"
 accesslog="-"
 errorlog="-"
 use_reloader=true
+certfile="/etc/letsencrypt/live/drex.space/fullchain.pem"
+keyfile="/etc/letsencrypt/live/drex.space/privkey.pem"
