--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-trio = "^0.7.0"
 pudb = "^2019.2"
 pytest-pudb = "^0.7.0"
 phonenumbers = "^8.12.16"
+Quart = "0.13.*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
