more transitive dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pudb = "^2019.2"
 pytest-pudb = "^0.7.0"
 phonenumbers = "^8.12.16"
 Quart = "0.13.*"
+trio = "0.17.*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
